Page MenuHome GnuPG

gpgtar does not return failure code to gpgme
Closed, ResolvedPublic

Description

If you decrypt an archive with Kleopatra for which there is not enough space on the device, Kleopatra does not report an error. The decrypted folder contains only the files for which there was enough space.

On the command line you get :

gpgtar: error writing 'filename': No space left on device

Details

Version
Gpg4win-4.1.1-beta317

Event Timeline

werner triaged this task as Normal priority.May 19 2023, 1:07 PM
werner edited projects, added gnupg24, gnupg22, Bug Report; removed gpgme.
werner added a subscriber: werner.

Fixed in 2.4

werner moved this task from Backlog to WiP on the gnupg22 board.
werner changed the task status from Open to Testing.May 26 2023, 3:57 PM
werner moved this task from WiP to QA on the gnupg22 board.
werner edited projects, added gnupg24 (gnupg-2.4.2); removed gnupg24.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Sep 22 2023, 9:59 AM

Kleopatra now shows:

Entschlüsseln fehlgeschlagen: Systemfehler ohne gesetzten Systemfehlercode.

Which should automatically become the correct error message when T6528 is fixed.

Clicking on Diagnostics brings up:

gpg: enabled debug flags: memstat
gpg: enabled compatibility flags:
gpg: Öffentlicher Schlüssel ist FFA2FCCB2EC589F8
gpg: der Unterschlüssel FFA2FCCB2EC589F8 wird anstelle des Hauptschlüssels 458612006D8E6F0D verwendet
gpg: pinentry launched (11860 qt 1.2.1 /dev/tty - - ? 0/0 -)
gpg: verwende Vertrauensmodell pgp
gpg: der Unterschlüssel FFA2FCCB2EC589F8 wird anstelle des Hauptschlüssels 458612006D8E6F0D verwendet
gpg: verschlüsselt mit 384-Bit ECDH Schlüssel, ID FFA2FCCB2EC589F8, erzeugt 2023-03-08
      "Berta Boss <Berta.Boss@demo.gnupg.com>"
gpg: AES256 verschlüsselte Daten
gpg: Ursprünglicher Dateiname='5G.txt'

Here I would expect more info about the errror, but there is only info about the start of the encryption job.

Is this resolved like this or not?

I think there is a timing issue between the termination of a job and the retrieval of gpg's output, so that gpg's output is sometimes truncated or even completely empty. This is a general problem and not specific for this ticket.

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Sep 27 2023, 3:09 PM

The error message in Kleo is now (with VS-Desktop-3.1.90.246-Beta) "Broken pipe". But in the linked error protocol you can find the gpg error message "no space left on device". So I would find this message acceptable.

Also see the related https://dev.gnupg.org/T6526#176861. Where there is no additional info in the error protocol.

ebo mentioned this in Unknown Object (Event).Oct 16 2023, 9:33 AM
ebo claimed this task.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

In VS-Desktop-3.1.90.258-Beta it is "no space left on device" now in the encrypt/verify window.

ebo edited projects, added gnupg22 (gnupg-2.2.42); removed gnupg22.